# pg-query-mapper

./: Cargo.toml  GEMINI.md  LICENSE.md  README.md
pg-query-mapper-derive/: Cargo.toml
pg-query-mapper-derive/src/: lib.rs
src/: lib.rs
tests/: integration_test.rs  macro_tests.rs
tests/ui/: fail_invalid_attribute.rs  fail_invalid_attribute.stderr  pass_complex_struct.rs
