[package]
name = "pg-query-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
pg-query-mapper-derive = { path = "./pg-query-mapper-derive", version = "0.1.0" }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-uuid-1",
    "with-chrono-0_4",
] }
thiserror = "2.0"

[dev-dependencies]
optional-field = { git = "https://github.com/thotsaphon/optional-field", branch = "next" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.30"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { version = "1.0", features = ["full"] }
trybuild = "1.0"

[workspace]
members = ["pg-query-mapper-derive"]
resolver = "2"
